syntax = "proto3";
package identity;

message FlameEntry {
  bytes namespace = 1;
  bytes key = 2;
  bytes value = 3;
}

message FlameAction {
  enum FlameActionType {
    CREATE = 0;
    UPDATE = 1;
    DELETE = 2;
    APPEND = 3;
  }

  FlameActionType flameActionType = 1;
  FlameEntry flameEntry = 2;
}

message FlameBatchAction {
  repeated FlameAction flameActionList = 1;
}

message FlameBatchRead {
  repeated FlameEntry flameEntryList = 1;
}

message FlameNamespaceList {
  repeated bytes flameNamespaceList = 1;
}

message FlameProposal {
  enum FlameProposalType {
    BATCH_ACTION = 0; /* FlameBatchAction */

    CREATE_USER = 1; /* FlameUser */
    UPDATE_USER = 2; /* FlameUser */
    DELETE_USER = 3; /* FlameUser */

    CREATE_INDEX_META = 4; /* FlameIndexMeta */
    UPDATE_INDEX_META = 5; /* FlameIndexMeta */
    DELETE_INDEX_META = 6; /* FlameIndexMeta */

    CREATE_ACCESS_CONTROL = 7; /* FlameAccessControl */
    UPDATE_ACCESS_CONTROL = 8; /* FlameAccessControl */
    DELETE_ACCESS_CONTROL = 9; /* FlameAccessControl */

    BATCH_USER = 10;
    BATCH_INDEX_META = 11;
    BATCH_ACCESS_CONTROL = 12;
  }

  FlameProposalType flameProposalType = 1;
  bytes flameProposalData = 2;
}


message FlameUser {
  enum FlameUserType {
    SUPER_USER = 0;
    NORMAL_USER = 1;
  }

  FlameUserType flameUserType = 1;
  string roles = 2; /* Comma separated user defined roles */
  string username = 3;
  string password = 4;
  uint64 createdAt = 5;
  uint64 updatedAt = 6;
  bytes userData = 7;
}

message FlameUserList {
  repeated FlameUser flameUserList = 1;
}

message FlameUsernameList {
  repeated string flameUsernameList = 1;
}

message FlameAccessControl {
  string username = 1;
  bytes namespace = 2;
  bytes permission = 3; /* First 1 byte is considered as permission.
                            Counted right to left bit
                            Permission format:
                              first byte read,
                              second byte write,
                              third byte update,
                              fourth byte delete
                        */
  uint64 createdAt = 4;
  uint64 updatedAt = 5;
}

message FlameAccessControlList {
  repeated FlameAccessControl flameAccessControlList = 1;
}