syntax = "proto3";
import "pkg/pb/flamed.proto";
package index;
//option go_package = "github.com/mkawserm/flamed/tp/index";

enum Action {
  UPSERT = 0;
  DELETE = 1;
}

message IndexPayload {
  Action action = 1;
  pb.IndexMeta indexMeta = 2;
}
